--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^8.1.0",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "mongoose": "^8.1.0"
+    "passport-local-mongoose": "^8.0.0"
   }
 }
